swagger conf
