# src/swaggermain.json
@@ -39,24 +39,29 @@
           "http"
         ],
         "summary": "Lists specific server",
-        "operationId": "idserver",
-        "security": [
-          {
-            "api_key": []
-          },
-          {
-            "oauth": []
-          }
-        ],
+        "operationId": "detailserver",
         "responses": {
-          "200": {
-            "$ref": "#/responses/someResponse"
-          },
-          "422": {
-            "$ref": "#/responses/validationError"
-          },
           "default": {
-            "$ref": "#/responses/genericError"
+            "$ref": "#/responses/validationError"
+          }
+        }
+      },
+      "post": {
+        "description": "This will register asset.",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "summary": "Add servers",
+        "operationId": "addserver",
+        "responses": {
+          "default": {
+            "$ref": "#/responses/validationError"
           }
         }
       },
@@ -72,24 +77,10 @@
           "http"
         ],
         "summary": "Delete servers",
-        "operationId": "idserver",
-        "security": [
-          {
-            "api_key": []
-          },
-          {
-            "oauth": []
-          }
-        ],
+        "operationId": "deleteserver",
         "responses": {
-          "200": {
-            "$ref": "#/responses/someResponse"
-          },
-          "422": {
-            "$ref": "#/responses/validationError"
-          },
           "default": {
-            "$ref": "#/responses/genericError"
+            "$ref": "#/responses/validationError"
           }
         }
       },
@@ -105,220 +96,35 @@
           "http"
         ],
         "summary": "Update specific server",
-        "operationId": "idserver",
-        "security": [
-          {
-            "api_key": []
-          },
-          {
-            "oauth": []
-          }
-        ],
+        "operationId": "updateserver",
         "responses": {
-          "200": {
-            "$ref": "#/responses/someResponse"
-          },
-          "422": {
-            "$ref": "#/responses/validationError"
-          },
           "default": {
-            "$ref": "#/responses/genericError"
+            "$ref": "#/responses/validationError"
           }
         }
       }
     }
   },
-  "definitions": {
-    "HardwareDefinition": {
-      "type": "object",
-      "properties": {
-        "CPU": {
-          "description": "Server CPU Speed",
-          "type": "string"
-        },
-        "Model": {
-          "description": "Server Model",
-          "type": "string"
-        },
-        "RAM": {
-          "description": "Server Memory",
-          "type": "string"
-        }
-      },
-      "x-go-package": "db"
-    },
-    "Localisation": {
-      "type": "object",
-      "properties": {
-        "Building": {
-          "description": "Server Building",
-          "type": "string"
-        },
-        "Rack": {
-          "description": "Server Rack",
-          "type": "string"
-        },
-        "Room": {
-          "description": "Server Room",
-          "type": "string"
-        }
-      },
-      "x-go-package": "db"
-    },
-    "Network": {
-      "type": "object",
-      "properties": {
-        "NAssetCode": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "NCMDBName": {
-          "type": "string"
-        },
-        "NFunction": {
-          "type": "string"
-        },
-        "NRows": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Localisation"
-          }
-        },
-        "NSerialNumber": {
-          "type": "string"
-        }
-      },
-      "x-go-package": "db"
-    },
-    "Networks": {
-      "type": "object",
-      "properties": {
-        "Ipaddr": {
-          "description": "Server Ip Add associated",
-          "type": "string",
-          "x-go-name": "IpAddr"
-        },
-        "MAC": {
-          "description": "Server VLAN",
-          "type": "string"
-        },
-        "Patchpanel": {
-          "description": "Server Patch Panel Number",
-          "type": "string",
-          "x-go-name": "PatchPanel"
-        },
-        "Serverport": {
-          "description": "Server Port",
-          "type": "string",
-          "x-go-name": "ServerPort"
-        },
-        "Switch": {
-          "description": "Server Switch",
-          "type": "string"
-        },
-        "Vlan": {
-          "description": "Server vlan",
-          "type": "string"
-        }
-      },
-      "x-go-package": "db"
-    },
-    "ObjectId": {
-      "description": "http://www.mongodb.org/display/DOCS/Object+IDs",
-      "type": "string",
-      "title": "ObjectId is a unique ID identifying a BSON value. It must be exactly 12 bytes\nlong. MongoDB objects by default have such a property set in their \"_id\"\nproperty.",
-      "x-go-package": "gopkg.in/mgo.v2/bson"
-    },
-    "Person": {
-      "type": "object",
-      "properties": {
-        "Mail": {
-          "type": "string"
-        },
-        "Password": {
-          "type": "string"
-        },
-        "User": {
-          "type": "string"
-        }
-      },
-      "x-go-package": "db"
-    },
-    "Server": {
-      "description": "A Server have multiple information to be stored.",
-      "type": "object",
-      "title": "Server represents the asset for this application",
-      "properties": {
-        "Assetcode": {
-          "description": "Server Asset Code",
-          "type": "string",
-          "x-go-name": "AssetCode"
-        },
-        "Building": {
-          "description": "Server Building",
-          "type": "string"
-        },
-        "CMDBName": {
-          "description": "Server Name",
-          "type": "string"
-        },
-        "CPU": {
-          "description": "Server CPU Speed",
-          "type": "string"
-        },
-        "Function": {
-          "description": "Server Function",
-          "type": "string"
-        },
-        "InsertTime": {
-          "description": "Server Insert Time"
-        },
-        "Model": {
-          "description": "Server Model",
-          "type": "string"
-        },
-        "Networksrows": {
-          "description": "Server Network Definition",
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Networks"
+  "definitions": {},
+  "responses": {
+    "validationError": {
+      "description": "A ValidationError is an error that is used when the required input fails validation.",
+      "schema": {
+        "type": "object",
+        "required": [
+          "Message"
+        ],
+        "properties": {
+          "FieldName": {
+            "description": "An optional field name to which this validation applies",
+            "type": "string"
           },
-          "x-go-name": "Networking"
-        },
-        "RAM": {
-          "description": "Server Memory",
-          "type": "string"
-        },
-        "Rack": {
-          "description": "Server Rack",
-          "type": "string"
-        },
-        "Remarks": {
-          "description": "Remark associate to server",
-          "type": "string"
-        },
-        "Room": {
-          "description": "Server Room",
-          "type": "string"
-        },
-        "SerialNumber": {
-          "description": "Server Serial Number",
-          "type": "string"
-        },
-        "Status": {
-          "description": "Server Status",
-          "type": "string"
-        },
-        "UpdateTime": {
-          "description": "Server Update Time"
-        },
-        "id": {
-          "description": "ID Server Generated",
-          "x-go-name": "ID",
-          "$ref": "#/definitions/ObjectId"
+          "Message": {
+            "description": "The validation message",
+            "type": "string"
+          }
         }
-      },
-      "x-go-package": "db"
+      }
     }
   }
 }
